umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_nitrosocyclohexane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 8
    bond_count: 8
    topology: GoGKHG
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CHv3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1v3}"
      - "{CH2v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 8
    bond_count: 8
    topology: GoGKHG
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CHv3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1v3}"
      - "{CH2v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
