umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_nitrosoethane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom N at index 2 has 2 valence matches: {N/1v3}, {Nv3a2}"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{CH3v1}"
      - "{CH2v2}"
      - "{N/1v3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "="
