umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_propan-2-ol.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "C#h3#v"
      - "C#h#v3"
      - "C#h3#v"
      - "O#h#n2#v"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "C#h3#v"
      - "C#h#v3"
      - "C#h3#v"
      - "O#h#n2#v"
    bonds:
      - "-"
      - "-"
      - "-"
