umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_trimethylamine-oxide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: Db_
    atoms:
      - "{CH3v1}"
      - "{N+v4}"
      - "{CH3v1}"
      - "{CH3v1}"
      - "{O-/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: Db_
    atoms:
      - "{CH3v1}"
      - "{N+v4}"
      - "{CH3v1}"
      - "{CH3v1}"
      - "{O-/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
